packages/svelte/tests/compiler-errors/samples/empty-classname-binding/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'directive_missing_name',
		message: '`class:` name cannot be empty',
		position: [4, 10]
	}
});
